# sdk

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
go/: apikeys.go  codewire.go  codewire_test.go  environment.go  environments.go  go.mod  secret_projects.go  secrets.go  templates.go  types.go
go/internal/api/: oapi-codegen.yaml
python/: pyproject.toml  test_sdk.py
python/codewire/: __init__.py  client.py  environment.py  errors.py  http.py  resources.py  secrets.py
scripts/: filter-openapi.py
typescript/: package-lock.json  package.json
typescript/src/: api-keys.ts  environment.ts  environments.ts  http.ts  index.ts  secret-projects.ts  secrets.ts  templates.ts  test.ts  types.ts
