[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codewire"
version = "0.1.0"
description = "Codewire SDK — environment-first cloud development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]
keywords = ["codewire", "sandbox", "environment", "sdk"]

[project.urls]
Homepage = "https://codewire.sh"
Repository = "https://github.com/codewiresh/sdk"
